--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/reset.css">
   <!-- Add css -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/responsive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -40,7 +41,7 @@
     <div class="container">
       <div class="header-top">
         <!-- Logo -->
-        <img src="./assets/img/logo.svg" alt="Shine Smile" class="logo">
+        <a href="./"><img src="./assets/img/logo.svg" alt="shine smile" class="logo header__logo"></a>
         <!-- Navbar -->
         <nav class="navbar">
           <ul class="navbar__list">
@@ -87,6 +88,19 @@
 
     </div>
   </header>
+
+  <!-- Mobile header -->
+  <div class="mobile-header">
+    <!-- tablet-menu -->
+    <input type="checkbox" name="menu-checkbox" id="menu-checkbox" class="menu-checkbox" hidden>
+    <label for="menu-checkbox">
+      <svg class="menu-header__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path fill="currentColor"
+          d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+      </svg>
+    </label>
+    <label for="menu-checkbox" class="menu-overlay"></label>
+  </div>
   <!-- Main -->
   <main>
     <!-- Our service -->
